@@ -9,26 +9,33 @@
   </head>
   <body>
     <div class="wiki" style="display: block;">
-      <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a
-              href="https://www.openxava.org/"> <span>o</span>pen<span>x</span>ava </a> </span> / <a
-            href="index_en.html">documentation</a> / </span> Configuration for AS/400 </h1>
-      <i>If you're using an OpenXava version older than 7.0 look at the <a
-          href="as400-ox6_en.html">old instructions</a></i>
-      <div class="wiki" style="display: block;"> Configuring your OpenXava application to go against DB2 of an AS/400 is very simple, basically you have to add a dependency to the JDBC driver for AS/400 in your project and define correctly the datasource. You don't need to touch any code of your application.</div>
+      <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
+              <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_en.html">documentation</a>
+          / </span> Configuration for AS/400 </h1>
+      <i>If you're using an OpenXava version older than 7.0 look at the <a href="as400-ox6_en.html">old
+          instructions</a></i>
+      <div class="wiki" style="display: block;"> Configuring your OpenXava
+        application to go against DB2 of an AS/400 is very simple, basically you
+        have to add a dependency to the JDBC driver for AS/400 in your project
+        and define correctly the datasource. You don't need to touch any code of
+        your application.</div>
       <div class="wiki" style="display: block;">
         <h2 id="toc1">Add JDBC driver for AS/400 to your project</h2>
-        <p>Edit the <i>pom.xml</i> file in the root of your project, there add the next dependency inside the <i>&lt;dependencies&gt;</i> part:</p>
+        <p>Edit the <i>pom.xml</i> file in the root of your project, there add
+          the next dependency inside the <i>&lt;dependencies&gt;</i> part:</p>
         <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;net.sf.jt400&lt;/groupId&gt;
     &lt;artifactId&gt;jt400&lt;/artifactId&gt;
     &lt;version&gt;20.0.6&lt;/version&gt;
     &lt;classifier&gt;java8&lt;/classifier&gt;
 &lt;/dependency&gt;
-</code></pre>Maybe the above code is already in your <i>pom.xml</i> but commented, in that case just uncomment it.</div>
+</code></pre>Maybe the above code is already in your <i>pom.xml</i> but
+        commented, in that case just uncomment it.</div>
       <div class="wiki" style="display: block;"> </div>
       <div class="wiki" style="display: block;">
         <h2 id="toc1">Adjust your datasource definition</h2>
-        Edit <i>src/main/webapp/META-INF/context.xml</i> of your project to adjust the datasource to point to AS/400, something like this:</div>
+        Edit <i>src/main/webapp/META-INF/context.xml</i> of your project to
+        adjust the datasource to point to AS/400, something like this:</div>
       <div class="wiki" style="display: block;">
         <pre><code class="xml">&lt;Resource name="jdbc/MyAppDS" auth="Container"
     type="javax.sql.DataSource"
@@ -37,38 +44,93 @@
     driverClassName="com.ibm.as400.access.AS400JDBCDriver"
     url="jdbc:as400:192.168.1.8/mylib"/&gt;
 </code></pre> </div>
-      <div class="wiki" style="display: block;">The differences are the <i>driverClassName</i> and the <i>url</i>. Obviously, instead of <i>192.168.1.8</i> you should put the IP of your AS/400 and instead of <i>mylib</i> put the name of the library where your tables are in your AS/400. Also put the correct <i>username</i> and <i>password</i>. Maybe the above code is already in your <i>context.xml</i> but commented, in that case just uncomment it. Don't forget to comment or remove the datasource for HSQLDB (the default one when you create a new OpenXava project), only one datasource (with the same name) should be active.</div>
+      <div class="wiki" style="display: block;">The differences are the <i>driverClassName</i>
+        and the <i>url</i>. Obviously, instead of <i>192.168.1.8</i> you
+        should put the IP of your AS/400 and instead of <i>mylib</i> put the
+        name of the library where your tables are in your AS/400. Also put the
+        correct <i>username</i> and <i>password</i>. Maybe the above code is
+        already in your <i>context.xml</i> but commented, in that case just
+        uncomment it. Don't forget to comment or remove the datasource for
+        HSQLDB (the default one when you create a new OpenXava project), only
+        one datasource (with the same name) should be active.</div>
       <div class="wiki" style="display: block;">
         <h2 id="toc1">Update persistence.xml</h2>
-        You don't need to touch the <i>default</i> persistence unit of <i>persistence.xml</i> (in <i>src/main/resources/META-INF</i>), unless you use <i>hibernate.dialect</i> property in which case just remove <i>hibernate.dialect</i> property. Moreover, you should specify the <i>hibernate.default_schema</i> property for all the persistence units, to indicate in which library of your AS/400 are the tables of your application (unless you use <i>@Table(schema=)</i> in every entity). </div>
+        You don't need to touch the <i>default</i> persistence unit of <i>persistence.xml</i>
+        (in <i>src/main/resources/META-INF</i>), unless you use <i>hibernate.dialect</i>
+        property in which case just remove <i>hibernate.dialect</i> property.
+        Moreover, you should specify the <i>hibernate.default_schema</i>
+        property for all the persistence units, to indicate in which library of
+        your AS/400 are the tables of your application (unless you use <i>@Table(schema=)</i>
+        in every entity). </div>
       <div class="wiki" style="display: block;">
         <h2 id="toc1">Start the journal</h2>
-        In order that your OpenXava application works with AS/400 your tables must support transactions. The simple way to achieve it is creating the library for your tables from SQL using "CREATE COLLECTION MYLIB". Unfortunately most times you work against an AS/400 you have to work with preexisting tables. In this case you have to create a journal for your library, in this way:
+        In order that your OpenXava application works with AS/400 your tables
+        must support transactions. The simple way to achieve it is creating the
+        library for your tables from SQL using "CREATE COLLECTION MYLIB".
+        Unfortunately most times you work against an AS/400 you have to work
+        with preexisting tables. In this case you have to create a journal for
+        your library, in this way:
         <div class="wiki" style="display: block;">
           <pre><code class="shell">CRTJRNRCV JRNRCV(MYLIB/MYRCV) THRESHOLD(5000)
 CRTJRN JRN(MYLIB/MYJRN) JRNRCV(MYLIB/MYRCV) MNGRCV(*SYSTEM)
 CHGJRN JRN(MYLIB/MYJRN) JRNRCV(*GEN) DLTRCV(*YES)
 </code></pre></div>
-        <div class="wiki" style="display: block;">Instead&nbsp; of MYLIB use the name of your library. Afterwards you have to register all the table in the journal, thus:<br>
+        <div class="wiki" style="display: block;">Instead&nbsp; of MYLIB use the
+          name of your library. Afterwards you have to register all the table in
+          the journal, thus:<br>
           <div class="wiki" style="display: block;">
             <pre><code class="shell">STRJRNPF FILE(MYLIB/*ALL) JRN(MYLIB/MYJRN) IMAGES(*BOTH) OMTJRNE(*OPNCLO)
 </code></pre></div>
-          When in the future you'll create a new table to be used from OpenXava you have to add it to the journal:
+          When in the future you'll create a new table to be used from OpenXava
+          you have to add it to the journal:
           <div class="wiki" style="display: block;">
             <pre><code class="shell">STRJRNPF FILE(MYLIB/MYTABLE) JRN(MYLIB/MYJRN)
 </code></pre></div>
-          If you're not familiar with the AS/400 interface look for help from some AS/400 guru of your company for this task.</div>
+          If you're not familiar with the AS/400 interface look for help from
+          some AS/400 guru of your company for this task.</div>
         <h2>Rebuild your project</h2>
-        <p>After the changes you have to rebuild your project. In OpenXava Studio click with right mouse button on your project an choose <i>Run As &gt; Maven install</i>, thus:</p>
+        <p>After the changes you have to rebuild your project. In OpenXava
+          Studio click with right mouse button on your project an choose <i>Run
+            As &gt; Maven install</i>, thus:</p>
         <img src="files/run-as-maven-install.png" alt="">
-        <p>Or if you have Maven installed in your computer and you prefer to use command line:</p>
+        <p>Or if you have Maven installed in your computer and you prefer to use
+          command line:</p>
         <pre><code class="bash">$ cd myapp
 $ mvn install
 </code></pre>
-        <p>Optimization note: Instead of a <i>mvn install</i>, that do a complete Maven build, you can use <i>mvn war:exploded</i>, enough to apply the above changes for development. You can run <i>mvn war:exploded</i> from OpenXava Studio with <i>Run As &gt; Maven build...</i> and typing <i>war:exploded</i> for goal.</p>
+        <p>Optimization note: Instead of a <i>mvn install</i>, that do a
+          complete Maven build, you can use <i>mvn war:exploded</i>, enough to
+          apply the above changes for development. You can run <i>mvn
+            war:exploded</i> from OpenXava Studio with <i>Run As &gt; Maven
+            build...</i> and typing <i>war:exploded</i> for goal.</p>
         <h2>Run your application</h2>
-        <p>Run your application, it should work nicely against your IBM i. If it fails, verify that the user and password in <i>context.xml</i> are correct, that the server IP is correct. Also verify that the journal has been created and the tables added to it, as explained above.</p>
-        <p>If it still fails ask us in the <a href="https://sourceforge.net/p/openxava/discussion/419690/">OpenXava Help forum</a>. Include the content of your <i>persistence.xml</i>, <i>context.xml</i> (remove the passwords) and specially the stacktrace produced, you can find the trace in the <i>Console</i> tab of OpenXava Studio.</p>
+        <p>Run your application, it should work nicely against your IBM i. If it
+          fails, verify that the user and password in <i>context.xml</i> are
+          correct, that the server IP is correct. Also verify that the journal
+          has been created and the tables added to it, as explained above.</p>
+        <p>If it still fails ask us in the <a href="https://sourceforge.net/p/openxava/discussion/419690/">OpenXava
+            Help forum</a>. Include the content of your <i>persistence.xml</i>,
+          <i>context.xml</i> (remove the passwords) and specially the stacktrace
+          produced, you can find the trace in the <i>Console</i> tab of
+          OpenXava Studio.</p>
+        <h2>Performance problem with Windows Server</h2>
+        <p>If your Java application is running on a Windows Server and you are
+          experiencing performance issues, it may not necessarily be an issue
+          with the AS/400 but rather a network configuration problem on the
+          Windows Server. Don't worry, the problem is easy to fix, simply add
+          the parameter <i>tcp no delay=true</i> to the database connection
+          URL. That is, the definition of the data source in the <i>context.xml</i>
+          could be:</p>
+        <pre><code class="xml">&lt;Resource name="jdbc/MyAppDS" auth="Container"
+    type="javax.sql.DataSource"
+    maxTotal="100" maxIdle="20" maxWaitMillis="10000"
+    username="java" password="ao49fmsk"
+    driverClassName="com.ibm.as400.access.AS400JDBCDriver"
+    url="jdbc:as400:192.168.1.8/mylib;tcp no delay=true"/&gt;
+</code></pre>
+        <p>Note the <i>tcp no delay=true</i> at the end of the URL.</p>
+        <p></p>
+        <p></p>
       </div>
     </div>
   </body>
