@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- AS/400 connection documentation improved to cover performance problems in Windows Server.
 - Removed the use of eval() in @DescriptionsList editor.
 - The width of the calendar in list mode dynamically adjusts to occupy the entire available space.
 
